# oj-mini.py

./: README.md  oj-mini.py  setup.cfg  setup.py
.github/workflows/: format.yml  test.yml
tests/: smoke.py
