[options.extras_require]
dev =
    isort == 5.7.0
    mypy == 0.812
    pylint == 2.7.0
    yapf == 0.30.0

[yapf]
column_limit = 9999

[isort]
line_length = 9999

[pylint]
# run: $ pylint --rcfile=setup.cfg modules_or_packages
disable =
    abstract-method,
    invalid-name,
    line-too-long,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-else-break,
    no-else-raise,
    no-else-return,
    no-member,
    no-self-use,
    too-few-public-methods,
    too-many-arguments,
    too-many-boolean-expressions,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-public-methods,
    too-many-return-statements,
    too-many-statements,
    unused-wildcard-import,
    wildcard-import,
